--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<button id="food" onclick="list(1)">food</button>
 	<button id="vegetable" onclick="list(2)">vegetable</button>
 	<button id="drinks" onclick="list(3)">drinks</button>
-	<button id="edit" onclick="editoption()">edit</button>
+	<button id="edit" > <a href="./editlist.html">edit</a></button>
 	<div id="pathforedit">
 		<button onclick="poopofselection(1)">x</button>
 		<select id="pathlist">
